--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A home grown budgeting app" />
     <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin="" />
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Rokkitt:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <title>Budgetier</title>
   </head>
   <body>
